# tree-sitter-mips_asm

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-mips-asm.pc.in
bindings/c/tree_sitter/: tree-sitter-mips-asm.h
bindings/java/main/io/github/treesitter/jtreesitter/mipsasm/: TreeSitterMipsAsm.java
bindings/java/test/: TreeSitterMipsAsmTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mips_asm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
