[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-mips-asm"
description = "MipsAsm grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "mips-asm"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "RosieTheGhostie", email = "rosetheghost.dev@gmail.com" }]
requires-python = ">=3.10"
license.text = "LGPL-3.0+"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/rosietheghostie/tree-sitter-mips_asm"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
